# snaptrade-sdks

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  STATISTICS.md  api-fixed.yaml  api.yaml  konfig-yaml.schema.json  konfig.yaml  mise.toml  pyrightconfig.json
sdks/python/: .gitignore  .gitlab-ci.yml  .konfigignore  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  git_push.sh  mise.toml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  tox.ini
sdks/python/.konfig/: generate-id.txt
sdks/python/docs/: APIDisclaimerAcceptRequest.md  APIDisclaimerApi.md  APIStatusApi.md  Account.md  AccountHoldings.md  AccountInformationApi.md  AccountOrderRecord.md  AccountOrderRecordStatus.md  AccountSimple.md  Action.md  AuthenticationApi.md  AuthenticationLoginSnapTradeUser200Response.md  Balance.md  Brokerage.md  BrokerageAuthorization.md  BrokerageAuthorizationType.md  BrokerageAuthorizationTypeReadOnly.md  BrokerageAuthorizationTypeReadOnlyBrokerage.md  BrokerageSymbol.md  BrokerageType.md  CalculatedTrade.md  CashRestriction.md  ConnectionsApi.md  Currency.md  DeleteUserResponse.md  DividendAtDate.md  EncryptedResponse.md  EncryptedResponseEncryptedMessageData.md  ErrorLogsApi.md  Exchange.md  ExchangeRatePairs.md  ExcludedAsset.md  JWT.md  LoginRedirectURI.md  ManualTrade.md  ManualTradeAndImpact.md  ManualTradeBalance.md  ManualTradeForm.md  ManualTradeSymbol.md  Model400FailedRequestResponse.md  (+81 more)
sdks/python/snaptrade_client/: __init__.py  api_client.py  api_response.py  auth.py  client.py  client.pyi  client_custom.py  configuration.py  exceptions.py  (+9 more)
(+6112 files in other folders)
